--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_C_FLAGS_DEBUG "${GENERAL_DEBUG_FLAGS}")
 set(CMAKE_C_FLAGS_RELEASE "${GENERAL_RELEASE_FLAGS}")
 
 include(GNUInstallDirs)
-file(GLOB_RECURSE SHIM_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
+file(GLOB_RECURSE SHIM_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
 
 add_library(rdpmux SHARED "${SHIM_SOURCE_FILES}")
 
@@ -36,25 +36,31 @@ install(FILES
 install(FILES
         "${CMAKE_CURRENT_SOURCE_DIR}/librdpmux.pc" DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig")
 
-find_package(Glib2)
+find_package(Glib2 REQUIRED)
 if(GLIB2_FOUND)
     include_directories(${GLIB2_INCLUDE_DIRS})
     target_link_libraries(rdpmux ${GLIB2_LIBRARIES})
 endif(GLIB2_FOUND)
 
-find_package(GIO)
+find_package(GIO REQUIRED)
 if(GIO_FOUND)
     include_directories(${GIO_INCLUDE_DIR})
     target_link_libraries(rdpmux ${GIO_LIBRARIES})
 endif(GIO_FOUND)
 
-find_package(ZeroMQ)
+find_package(ZeroMQ REQUIRED)
 if(ZEROMQ_FOUND)
-    target_link_libraries(rdpmux ${ZEROMQ_LIBRARIES})
     include_directories(rdpmux ${ZEROMQ_INCLUDE_DIRS})
+    target_link_libraries(rdpmux ${ZEROMQ_LIBRARIES})
 endif(ZEROMQ_FOUND)
 
-find_package(Pixman)
+find_package(CZMQ REQUIRED)
+if(CZMQ_FOUND)
+    include_directories(rdpmux ${CZMQ_INCLUDE_DIRS})
+    target_link_libraries(rdpmux ${CZMQ_LIBRARIES})
+endif(CZMQ_FOUND)
+
+find_package(Pixman REQUIRED)
 target_link_libraries(rdpmux ${PIXMAN_LIBRARY})
 include_directories(${PIXMAN_INCLUDE_DIR})
 
