Replaced printfs with actual debug macros.
When you configure the CMake project to build in either "Debug" or
"RelWithDebInfo" mode, copious amounts of debug output will be enabled.
Builds will build without debug output by default now! Hooray!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,14 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GENERAL_WARNING_FLAGS} ${GENERAL_COMPILER_
 set(CMAKE_C_FLAGS_DEBUG "${GENERAL_DEBUG_FLAGS}")
 set(CMAKE_C_FLAGS_RELEASE "${GENERAL_RELEASE_FLAGS}")
 
+# Add debug output for debug builds
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+         add_definitions(-DUSE_DEBUG_OUTPUT)
+endif(CMAKE_BUILD_TYPE MATCHES Debug)
+if(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
+    add_definitions(-DUSE_DEBUG_OUTPUT)
+endif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
+
 include(GNUInstallDirs)
 file(GLOB_RECURSE SHIM_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
 
